--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,2 @@
-include LICENSE README.md
+include README.md LICENSE HISTORY.md pytest.ini requirements.txt Pipfile Pipfile.lock
+recursive-include tests *.py
