--- a/Pipfile
+++ b/Pipfile
@@ -4,21 +4,20 @@ verify_ssl = true
 name = "pypi"
 
 [dev-packages]
-pytest = ">=2.8.0"
-codecov = "*"
-pytest-httpbin = ">=0.0.7"
-pytest-mock = "*"
-pytest-cov = "*"
-pytest-xdist = "*"
+"pytest" = ">=2.8.0"
+"codecov" = "*"
+"pytest-httpbin" = ">=0.0.7"
+"pytest-mock" = "*"
+"pytest-cov" = "*"
+"pytest-xdist" = "*"
 "readme-renderer[md]" = "*"
-sphinx = "*"
-sphinx_bootstrap_theme = "*"
-docutils = "*"
+"sphinx" = "*"
+"sphinx_bootstrap_theme" = "*"
+"docutils" = "*"
 "flake8" = "*"
-detox = "*"
-black = "*"
-twine = "*"
-httpbin = ">=0.7.0"
+"detox" = "*"
+"twine" = "*"
+"httpbin" = ">=0.7.0"
 
 [packages]
 e1839a8 = {path = ".",editable = true}
