--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,18 @@
 language: python
+install: "make"
+script:
+  - make ci
+cache: pip
+jobs:
+  include:
+    - stage: test
+      script:
+        - make ci
+      python: '2.7'
+    - stage: test
+      script:
+        - make ci
+      python: '3.7'
+    - stage: coverage
+      python: '3.7'
+      script: codecov
