--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: python
 install: "make"
 script:
@@ -13,6 +14,8 @@ jobs:
       script:
         - make ci
       python: '3.7'
+      dist: xenial
+      sudo: true
     - stage: coverage
-      python: '3.7'
+      python: '3.6'
       script: codecov
