--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 envlist = py27,py37
 
 [testenv]
-
+passenv = CI TRAVIS TRAVIS_*
+deps = codecov
 commands =
     python setup.py test
+    pytest --cov-config .coveragerc --verbose --cov-report term --cov-report xml --cov=cert_human tests
