still trying to get travis to do codecov upload

--- a/tox.ini
+++ b/tox.ini
@@ -6,4 +6,4 @@ passenv = CI TRAVIS TRAVIS_*
 deps = codecov
 commands =
     python setup.py test
-    pytest --cov-config .coveragerc --verbose --cov-report term --cov-report xml --cov=cert_human tests
+    make cov
