--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,6 @@ jobs:
       sudo: true
     - stage: coverage
       python: '3.6'
-      script: make cov
+      script:
+        - make cov
+        - codecov
