--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,10 @@ envlist = py27,py37
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
-deps = codecov
+deps =
+    -rrequirements.txt
+    -rrequirements-dev.txt
 commands =
     python setup.py test
-    make cov
+    pytest --junitxml=junit-report.xml --cov-config .coveragerc --verbose --cov-report term --cov-report xml --cov=cert_human tests
+    codecov
